Name:                ngram-index
Version:             0.1
Synopsis:            Simple NGram indexing
Description:         Simple NGram indexing
License:             BSD3
Author:              voidex
Maintainer:          voidex.org@gmail.com
Stability:           Experimental
Category:            Text
Build-type:          Simple
Cabal-version:       >=1.6

Flag development
  Description: Whether to build the server in development (interpreted) mode
  Default: False

Library
  GHC-Options: -Wall
  Hs-Source-Dirs: src

  Exposed-Modules:
    Text.Search.NGram

  Build-Depends:
    base          >= 4 && < 5,
    containers    >= 0.4 && < 0.5
